# web-practice-x20180324

./: README.md  stack.yaml  web-practice-x20180324.cabal
app/: Main.hs  Service.hs
src/: Funcs.hs
tests/: Main.hs
