name:                web-practice-x20180324
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/web-practice-x20180324#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Funcs
  build-depends:       base >= 4.7 && < 5

executable web-practice-x20180324-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , scotty
                      , ghc-mod
                      , hspec
                      , web-practice-x20180324

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , hspec
                      , web-practice-x20180324
